# libverify

./: .gitignore  CLAUDE.md  Cargo.toml  HACKING.md  README.md  plan.md
.cargo/: mutants.toml
.claude/: CLAUDE.md  settings.json
.claude/skills/fp-reduction-loop/: SKILL.md
.claude/skills/fp-reduction-loop/references/: fix-patterns.md
.github/workflows/: check-pr.yml  ci.yml  docs.yml  mutants.yml  publish.yml  scorecard.yml  verify-repo.yml
crates/core/: Cargo.toml
crates/core/src/: adapter.rs  aiops.rs  assessment.rs  cache.rs  control.rs  coverage.rs  dark_factory.rs  evidence.rs  integrity.rs  junit.rs  lib.rs  license.rs  linkage.rs  profile.rs  registry.rs  scope.rs  size.rs  slsa.rs  test_coverage.rs  union_find.rs  verdict.rs
crates/core/src/controls/: actions_pinned_dependencies.rs  agent_permission_boundary.rs  agent_spec_conformance.rs  behavioral_regression.rs  branch_history_integrity.rs  branch_protection_admin_enforcement.rs  branch_protection_enforcement.rs  build_isolation.rs  build_provenance.rs  change_request_size.rs  code_scanning_alerts_resolved.rs  codeowners_coverage.rs  container_provenance.rs  container_signature.rs  conventional_title.rs  coverage_threshold.rs  default_branch_settings_baseline.rs  dependency_completeness.rs  dependency_license_compliance.rs  dependency_provenance.rs  dependency_signature.rs  dependency_signer_verified.rs  dependency_update_tool.rs  deployment_health.rs  description_quality.rs  destructive_action_detection.rs  dismiss_stale_reviews_on_push.rs  environment_protection_rules.rs  harness_gate.rs  harness_result.rs  hosted_build_platform.rs  issue_linkage.rs  license_compliance.rs  mcp_scope_check.rs  merge_commit_policy.rs  mod.rs  network_egress_audit.rs  privileged_operation_audit.rs  privileged_workflow_detection.rs  protected_tags.rs  (+20 more)
crates/core/src/tests/: linkage_hardening.rs  scope_hardening.rs  union_find_hardening.rs
crates/core/tests/: dependency_signature_integration.rs
crates/drata/: Cargo.toml
crates/drata/src/: adapter.rs  client.rs  lib.rs  model.rs
crates/gen-docs/: Cargo.toml
crates/github/: Cargo.toml
crates/github/src/: adapter.rs  attestation.rs  client.rs  config.rs  dependency.rs  graphql.rs  lib.rs  npm_attestation.rs  ossinsight.rs  posture.rs  pr_api.rs  pypi_attestation.rs  range.rs  release_api.rs  types.rs  verify.rs
crates/gitlab/: Cargo.toml
crates/gitlab/src/: adapter.rs  client.rs  config.rs  lib.rs  posture.rs  types.rs  verify.rs
crates/output/: Cargo.toml
crates/output/examples/: oss_scenario.rs
crates/output/src/: drata.rs  json.rs  lib.rs  matrix.rs  sarif.rs  vanta.rs
crates/policy/: Cargo.toml
crates/policy/examples/: aiops_scenario.rs  audit_scenarios.rs  dark_factory_scenario.rs  enterprise_scenario.rs  fleet_assessment.rs  startup_graduation.rs
crates/policy/src/: aiops.rego  dark-factory.rego  default.rego  dora.rego  gdpr.rego  hipaa.rego  ismap.rego  iso-27001.rego  lib.rs  nist-800-53.rego  oss.rego  pci-dss.rego  scorecard.rego  slsa-l1.rego  slsa-l2.rego  slsa-l3.rego  slsa-l4.rego  soc1.rego  soc2.rego  tisax.rego  wp29.rego
crates/vanta/: Cargo.toml
crates/vanta/src/: adapter.rs  client.rs  lib.rs  model.rs
crates/verif/: Cargo.toml
crates/verif/src/: lib.rs
docs/adr/: 0001-verification-unit-is-agent-execution.md  0003-behavioral-diff-deferred.md
mutants.out.old/: caught.txt  lock.json  mutants.json  outcomes.json  unviable.txt
mutants.out.old/diff/: crates__output__src__json.rs_line_15_col_5.diff  crates__output__src__json.rs_line_15_col_5_001.diff  crates__output__src__json.rs_line_24_col_5.diff  crates__output__src__json.rs_line_29_col_29.diff  crates__output__src__json.rs_line_47_col_5.diff  crates__output__src__json.rs_line_6_col_5.diff  crates__output__src__json.rs_line_6_col_5_001.diff  crates__output__src__lib.rs_line_25_col_5.diff  crates__output__src__lib.rs_line_26_col_9.diff  crates__output__src__lib.rs_line_27_col_9.diff  crates__output__src__lib.rs_line_33_col_5.diff  crates__output__src__lib.rs_line_33_col_5_001.diff  crates__output__src__lib.rs_line_45_col_5.diff  crates__output__src__lib.rs_line_45_col_5_001.diff  crates__output__src__sarif.rs_line_10_col_5.diff  crates__output__src__sarif.rs_line_10_col_5_001.diff  crates__output__src__sarif.rs_line_132_col_16.diff  crates__output__src__sarif.rs_line_148_col_16.diff  crates__output__src__sarif.rs_line_14_col_18.diff  crates__output__src__sarif.rs_line_14_col_18_001.diff  crates__output__src__sarif.rs_line_15_col_26.diff  crates__output__src__sarif.rs_line_15_col_26_001.diff  crates__output__src__sarif.rs_line_16_col_23.diff  crates__output__src__sarif.rs_line_16_col_23_001.diff  crates__output__src__sarif.rs_line_17_col_32.diff  crates__output__src__sarif.rs_line_17_col_32_001.diff  crates__output__src__sarif.rs_line_183_col_5.diff  crates__output__src__sarif.rs_line_188_col_53.diff  crates__output__src__sarif.rs_line_18_col_24.diff  crates__output__src__sarif.rs_line_18_col_24_001.diff  crates__output__src__sarif.rs_line_198_col_5.diff  crates__output__src__sarif.rs_line_19_col_33.diff  crates__output__src__sarif.rs_line_19_col_33_001.diff  crates__output__src__sarif.rs_line_206_col_5.diff  crates__output__src__sarif.rs_line_206_col_5_001.diff  crates__output__src__sarif.rs_line_28_col_18.diff  crates__output__src__sarif.rs_line_28_col_18_001.diff  crates__output__src__sarif.rs_line_28_col_5.diff  crates__output__src__sarif.rs_line_28_col_5_001.diff  crates__output__src__sarif.rs_line_28_col_5_002.diff  (+73 more)
tools/gen-docs/src/: main.rs
