[workspace]
members = ["crates/core", "crates/policy", "crates/output", "crates/github", "crates/verif", "crates/gen-docs"]
resolver = "2"

[workspace.package]
version = "0.6.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/libverify"
authors = ["Hikaru Egashira"]

[workspace.dependencies]
libverify-core = { path = "crates/core", version = "0.6.0" }
libverify-policy = { path = "crates/policy", version = "0.6.0" }
libverify-github = { path = "crates/github", version = "0.6.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls-native-roots"] }
sha2 = "0.10"
base64 = "0.22"
tempfile = "3"
regorus = "0.9"
creusot-std = { git = "https://github.com/creusot-rs/creusot", package = "creusot-std" }

[profile.release]
lto = true
strip = true
codegen-units = 1
