[workspace]
members = ["crates/core", "crates/policy", "crates/output", "crates/github", "crates/gitlab", "crates/verif", "crates/gen-docs"]
resolver = "2"

[workspace.package]
version = "0.10.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/HikaruEgashira/libverify"
authors = ["Hikaru Egashira"]

[workspace.dependencies]
libverify-core = { path = "crates/core", version = "0.10.0" }
libverify-policy = { path = "crates/policy", version = "0.10.0" }
libverify-github = { path = "crates/github", version = "0.10.0" }
libverify-gitlab = { path = "crates/gitlab", version = "0.10.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "rustls-native-certs"] }
sha2 = "0.11"
base64 = "0.22"
tempfile = "3"
p256 = { version = "0.13", features = ["ecdsa"] }
x509-cert = "0.2"
regorus = "0.9"
creusot-std = { git = "https://github.com/creusot-rs/creusot", package = "creusot-std" }

[profile.release]
lto = true
strip = true
codegen-units = 1
