[package]
name = "libverify-drata"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Drata compliance platform adapter for libverify verification results"

[dependencies]
libverify-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
libverify-policy = { workspace = true }
