[package]
name = "libverify-output"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Output formatters (SARIF, JSON) for libverify verification results"

[dependencies]
libverify-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
libverify-policy = { workspace = true }
